# 3d_coverage

./: .gitignore  CMakeLists.txt  README.md  Solution.cpp  Vec.h  bare_visibility.cpp  cumulative_quality.cpp  main.cpp  max_quality.cpp
bus_model/: uniform_out.pcd
icu_model/: uniform_out.pcd
include/: Solution.h
train_model/: uniform_out.pcd
